--- a/app/views/timelog/edit.rhtml
+++ b/app/views/timelog/edit.rhtml
@@ -10,6 +10,10 @@
 <%= back_url_hidden_field_tag %>
 
 <div class="box">
+<% if User.current.admin? %>
+  <p><%= f.select :user_id, User.active.collect{|u| [u.to_s,u.id]}, :required => true %></p>
+  <p><%= f.select :project_id, Project.find(:all, :order => 'name').collect{|u| [u.name,u.id]}, :required => true %></p>
+<% end %>
 <p><%= f.text_field :issue_id, :size => 6 %> <em><%= h("#{@time_entry.issue.tracker.name} ##{@time_entry.issue.id}: #{@time_entry.issue.subject}") if @time_entry.issue %></em></p>
 <p><%= f.text_field :spent_on, :size => 10, :required => true %><%= calendar_for('time_entry_spent_on') %></p>
 <p><%= f.text_field :hours, :size => 6, :required => true %></p>
