--- a/app/views/timelog/index.html.erb
+++ b/app/views/timelog/index.html.erb
@@ -33,3 +33,5 @@ already in the URI %>
 <% content_for :header_tags do %>
     <%= auto_discovery_link_tag(:atom, {:issue_id => @issue, :format => 'atom', :key => User.current.rss_key}, :title => l(:label_spent_time)) %>
 <% end %>
+
+test!!!
