--- a/app/views/timelog/_list.rhtml
+++ b/app/views/timelog/_list.rhtml
@@ -8,6 +8,7 @@
 <table class="list time-entries">
 <thead>
 <tr>
+<td>&nbsp;</td>
 <%= sort_header_tag('spent_on', :caption => l(:label_date), :default_order => 'desc') %>
 <%= sort_header_tag('user', :caption => l(:label_member)) %>
 <%= sort_header_tag('activity', :caption => l(:label_activity)) %>
@@ -21,6 +22,7 @@
 <tbody>
 <% entries.each do |entry| -%>
 <tr class="time-entry <%= cycle("odd", "even") %> hascontextmenu">
+<td class="checkbox hide-when-print"><%= check_box_tag("ids[]", entry.id, false, :id => nil) %></td>
 <td class="spent_on"><%= format_date(entry.spent_on) %></td>
 <td class="user"><%=h entry.user %></td>
 <td class="activity"><%=h entry.activity %></td>
