--- a/app/views/timelog/bulk_edit.rhtml
+++ b/app/views/timelog/bulk_edit.rhtml
@@ -1,6 +1,6 @@
 <h2><%= l(:label_bulk_edit_selected_time_entries) %></h2>
 
-<ul><%= @time_entries.collect {|i| content_tag('li', link_to(h("#{i.tracker} ##{i.id}"), { :action => 'show', :id => i }) + h(": #{i.subject}")) }.join("\n") %></ul>
+<ul><%= @time_entries.collect {|i| content_tag('li', link_to(h("#{i.project} #{i.spent_on} #{i.hours}"), { :action => 'show', :id => i }))} %></ul>
 
 <% form_tag(:action => 'bulk_update') do %>
 <%= @time_entries.collect {|i| hidden_field_tag('ids[]', i.id)}.join %>
@@ -16,6 +16,11 @@
 </p>
 <% end %>
 
+<p>
+  <label><%= l(:field_comments) %></label>
+  <%= text_field('time_entry[comments]', :comments, :size => 100) %>
+</p>
+
 <% @custom_fields.each do |custom_field| %>
 	<p><label><%= h(custom_field.name) %></label> <%= custom_field_tag_for_bulk_edit('time_entry', custom_field) %></p>
 <% end %>
@@ -23,11 +28,6 @@
 <%= call_hook(:view_time_entries_bulk_edit_details_bottom, { :time_entries => @time_entries }) %>
 </div>
 
-</fieldset>
-
-<fieldset><legend><%= l(:field_notes) %></legend>
-<%= text_area_tag 'notes', @notes, :cols => 60, :rows => 10, :class => 'wiki-edit' %>
-<%= wikitoolbar_for 'notes' %>
 </fieldset>
 </div>
 
