--- a/app/views/timelog/_list.rhtml
+++ b/app/views/timelog/_list.rhtml
@@ -8,7 +8,12 @@
 <table class="list time-entries">
 <thead>
 <tr>
-<td>&nbsp;</td>
+<th class="checkbox hide-when-print">
+  <%= link_to image_tag('toggle_check.png'), 
+    {}, 
+    :onclick => 'toggleIssuesSelection(Element.up(this, "form")); return false;', 
+    :title => "#{l(:button_check_all)}/#{l(:button_uncheck_all)}" %>
+</th>
 <%= sort_header_tag('spent_on', :caption => l(:label_date), :default_order => 'desc') %>
 <%= sort_header_tag('user', :caption => l(:label_member)) %>
 <%= sort_header_tag('activity', :caption => l(:label_activity)) %>
